...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/presentation"
            android:layout_width="match_parent"
            android:layout_height="57dp">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/mode_selection"
                app:layout_constraintHorizontal_bias="0.375"
...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/funny"
            android:layout_width="match_parent"
            android:layout_height="68dp">

            <CheckBox
                android:id="@+id/checkBox"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="97dp"
                android:layout_height="49dp"
                android:fontFamily="@font/bungee_inline"
                android:text="@string/funny"
                android:textColor="@color/black"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oxygen"
                android:text="@string/timedDescription"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/raceButton_"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.49" />

            <androidx.appcompat.widget.AppCompatButton
...

            <ImageButton
                android:id="@+id/infoSurvival"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                app:layout_constraintBottom_toBottomOf="@+id/survivalButton_"
                app:layout_constraintEnd_toEndOf="@+id/survivalButton_"
                app:layout_constraintHorizontal_bias="0.521"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/survivalButton_"
                app:layout_constraintVertical_bias="0.29"
                app:srcCompat="@drawable/ic_baseline_info_24"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oxygen"
                android:text="@string/classicDescription"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/regularButton_"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/regularButton_"
                app:layout_constraintVertical_bias="0.453" />

            <androidx.appcompat.widget.AppCompatButton
...
