<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_summary_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".game.solo.fragments.GameSummaryFragment">

    <!-- Guidelines -->
    <ImageButton
...
        app:layout_constraintStart_toEndOf="@+id/title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/replay"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/border_button_white"
        android:contentDescription="@string/content_description_ImageButton"
        android:src="@drawable/ic_baseline_replay_24"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:layout_constraintVertical_bias="0.272"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/quit"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:background="@null"
        android:contentDescription="@string/content_description_ImageButton"
        android:src="@drawable/ic_baseline_cancel_24"
...
